--- a/src/Presentation/SmartStore.Web/Views/Catalog/_ProductBoxList.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Catalog/_ProductBoxList.cshtml
@@ -216,7 +216,7 @@
                             data-form-selector="#product-details-form"
                             data-type="wishlist"
                             data-action="add">
-                            <i class="fa fa-gift"></i>
+                            <i class="fa fa-heart"></i>
                             @T("Categories.Wishlist")
                         </a>
                     }
@@ -228,7 +228,7 @@
 						    rel="nofollow"
                             data-type="compare"
                             data-action="add">
-                            <i class="fa fa-retweet"></i>
+                            <i class="fa fa-file-text"></i>
                             @T("Categories.Compare")
                         </a>
                     }
@@ -250,7 +250,7 @@
                             data-type="cart"
                             data-action="add">
                             @(Model.ProductPrice.AvailableForPreOrder ? T("ShoppingCart.PreOrder") : T("ShoppingCart.AddToCart"))
-                            <i class="fa fa-shopping-cart"></i>      
+                            <i class="fa fa-cart-arrow-down"></i>      
                         </a>
 					}
 					else
