--- a/src/Presentation/SmartStore.Web/Views/Product/ProductTemplate.Simple.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Product/ProductTemplate.Simple.cshtml
@@ -275,7 +275,7 @@
                                 data-form-selector="#product-details-form"
                                 data-type="wishlist"
                                 data-action="add">
-                                <i class="fa fa-fw fa-gift"></i>
+                                <i class="fa fa-fw fa-heart"></i>
                                 @T("ShoppingCart.AddToWishlist")
                             </a>
                         </div>
