--- a/src/Presentation/SmartStore.Web/Views/Shared/_ProductBox.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Shared/_ProductBox.cshtml
@@ -30,7 +30,7 @@
 			   data-form-selector="#product-details-form"
 			   data-type="wishlist"
 			   data-action="add">
-				<i class="fa fa-gift"></i>
+				<i class="fa fa-heart"></i>
 				@T("Categories.Wishlist")
 			</a>
 		}
@@ -42,7 +42,7 @@
 			   rel="nofollow"
 			   data-type="compare"
 			   data-action="add">
-				<i class="fa fa-retweet"></i>
+				<i class="fa fa-file-text"></i>
 				@T("Categories.Compare")
 			</a>
 		}
@@ -176,7 +176,7 @@
                     rel="tooltip nofollow"
                     data-type="cart"
                     data-action="add">
-                    <i class="fa fa-shopping-cart"></i>      
+                    <i class="fa fa-cart-arrow-down"></i>      
                 </a>
 			}
 			else
