--- a/src/Presentation/SmartStore.Web/Views/ShoppingCart/FlyoutWishlist.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/ShoppingCart/FlyoutWishlist.cshtml
@@ -56,7 +56,7 @@
 								 data-name="@item.ProductName"
 								 data-type="cart"
 								 data-action="addfromwishlist">
-								<i class="fa fa-shopping-cart"></i>
+								<i class="fa fa-cart-arrow-down"></i>
 							</a>
 						</div>
 					}
