--- a/src/Presentation/SmartStore.Web/Views/ShoppingCart/Wishlist.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/ShoppingCart/Wishlist.cshtml
@@ -313,7 +313,7 @@
                         @if (Model.DisplayAddToCart)
                         {
                             <button type="submit" name="addtocartbutton" value="addtocartbutton" class="btn btn-primary pull-right wishlist-add-to-cart-button">
-                                <i class="fa fa-shopping-cart"></i>
+                                <i class="fa fa-cart-arrow-down"></i>
                                 @T("ShoppingCart.AddToCart")
                             </button>
                         }						
