--- a/src/Presentation/SmartStore.Web/Themes/Alpha/Content/product.less
+++ b/src/Presentation/SmartStore.Web/Themes/Alpha/Content/product.less
@@ -200,7 +200,7 @@
 .product-details-page .add-to-cart {
 	padding-top: 10px;
 }
-.product-details-page #details-cnt .add-to-cart .fa-plus-circle {
+.product-details-page #details-cnt .add-to-cart .fa-cart-plus {
 	position: absolute;
     right: 6px;
     top: 50%;
