--- a/src/Presentation/SmartStore.Web/Content/bootstrap/custom/custom.less
+++ b/src/Presentation/SmartStore.Web/Content/bootstrap/custom/custom.less
@@ -211,6 +211,9 @@ span.field-validation-error {
 .btn-below {
 	margin-top: 5px !important;
 }
+.btn-right {
+	margin-left: 10px !important;
+}
 
 
 // FORMS (GENERAL)
