Getting started with import column mapping

--- a/src/Presentation/SmartStore.Web/Administration/Views/Import/_CreateOrUpdate.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Import/_CreateOrUpdate.cshtml
@@ -130,6 +130,8 @@
 	@Html.Partial("CsvConfiguration", Model.CsvConfiguration, viewData)
 }
 
+@Html.Partial("_ColumnMappings")
+
 <script type="text/javascript">
 	jQuery(document).ready(function () {
 
