jQuery selector correction

--- a/src/Presentation/SmartStore.Web/Views/Checkout/Confirm.Mobile.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Checkout/Confirm.Mobile.cshtml
@@ -45,7 +45,7 @@
             {
                  <script type="text/javascript">
                      $(function () {
-                         $("#terms-of-service-trigger", "#disclaimer-trigger").bind("tap", function (event, data) {
+                         $("#terms-of-service-trigger, #disclaimer-trigger").bind("tap", function (event) {
                              event.stopPropagation();
                          });
                     });
