Further implementation of import column mapping

--- a/src/Presentation/SmartStore.Web/Administration/Content/admin.less
+++ b/src/Presentation/SmartStore.Web/Administration/Content/admin.less
@@ -888,6 +888,9 @@ tr.adminSeparator hr {
 	.progress-info {
 		min-width: 260px;
 	}
+	select, input {
+		margin-bottom: 0;
+	}
 }
 
 /* SERVER CONTROLS */
