Validating and persisting import column mappings

--- a/src/Presentation/SmartStore.Web/Administration/Content/admin.less
+++ b/src/Presentation/SmartStore.Web/Administration/Content/admin.less
@@ -891,6 +891,10 @@ tr.adminSeparator hr {
 	select, input {
 		margin-bottom: 0;
 	}
+	.control-large {
+		width: 500px;
+		min-width: 500px;
+	}
 }
 
 /* SERVER CONTROLS */
