--- a/src/Presentation/SmartStore.Web/Administration/Views/Import/_ColumnMappings.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Import/_ColumnMappings.cshtml
@@ -19,8 +19,8 @@
 		<table class="table table-striped admin-table">
 			<thead>
 				<tr>
-					<th style="width: 15%;">@T("Admin.DataExchange.ColumnMapping.ImportField")</th>
-					<th style="width: 10%;">@T("Admin.DataExchange.ColumnMapping.ImportFieldIndex")</th>
+					<th style="width: 20%;">@T("Admin.DataExchange.ColumnMapping.ImportField")</th>
+					<th style="width: 15%;">@T("Common.Language")</th>
 					<th style="width: 32%;">@T("Admin.DataExchange.ColumnMapping.EntityProperty")</th>
 					<th>@T("Admin.DataExchange.ColumnMapping.DefaultValue")</th>
 				</tr>
@@ -30,27 +30,46 @@
 				{
 					<tr>
 						<td>
-							@mapping.ColumnWithoutIndex
+							@if (mapping.ColumnLocalized.HasValue())
+							{
+								<div>@mapping.ColumnLocalized</div>								
+							}
+							<div class="muted">@mapping.Column</div>
 						</td>
 						<td>
-							@mapping.ColumnIndex
+							@if (mapping.ColumnIndex.HasValue())
+							{
+								if (mapping.LanguageDescription.HasValue())
+								{
+									if (mapping.FlagImageFileName.HasValue())
+									{
+										<img src="~/Content/images/flags/@mapping.FlagImageFileName" alt="Icon" />
+									}
+									<span>@mapping.LanguageDescription</span>
+								}
+								else
+								{
+									<span class="muted">@T("Common.Unknown")</span>
+								}
+							}
 						</td>
 						<td>
-							<select name="ColumnMapping.EntityProperty.@mapping.Index" data-placeholder="@Model.UnspecifiedString" class="control-large">
+							<select name="ColumnMapping.Property.@mapping.Index" data-placeholder="@Model.UnspecifiedString" class="control-large">
 								<option></option>
 								@foreach (var prop in Model.AvailableEntityProperties)
 								{
-									var select = ((mapping.EntityProperty.HasValue() && prop.Value.IsCaseInsensitiveEqual(mapping.EntityProperty)) || 
-										(!mapping.EntityProperty.HasValue() && prop.Value.IsCaseInsensitiveEqual(mapping.Column)));
+									var select = !mapping.IsNilProperty &&
+										((mapping.Property.HasValue() && prop.Value.IsCaseInsensitiveEqual(mapping.Property)) ||
+										(!mapping.Property.HasValue() && prop.Value.IsCaseInsensitiveEqual(mapping.ColumnWithoutIndex)));
 
 									<option value="@prop.Value" @(select ? "selected='selected'" : "")>@prop.Text</option>
 								}
 							</select>
 							<br />
-							@Html.ValidationMessage("ColumnMapping.EntityProperty." + mapping.Index.ToString())
+							@Html.ValidationMessage("ColumnMapping.Property." + mapping.Index.ToString())
 						</td>
 						<td>
-							<input type="text" name="ColumnMapping.DefaultValue.@mapping.Index" class="text-box single-line" value="@mapping.DefaultValue" />
+							<input type="text" name="ColumnMapping.Default.@mapping.Index" class="text-box single-line" value="@mapping.Default" />
 						</td>
 					</tr>
 				}
